# valorant-1v1-banpick-overlay-admin-client

./: .prettierignore  README.md  eslint.config.js  package-lock.json  package.json  vite.config.ts
public/: overlay.html
public/css/: overlay.css
public/js/: overlay.js
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  player_manager.rs  socket_server.rs  tournament_broadcast.rs
src-tauri/src/commands/: mod.rs  server.rs  tournament.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: mod.rs  socket_server.rs  tournament_service.rs  tournament_validation.rs
src-tauri/src/timer/: commands.rs  mod.rs  service.rs  state.rs
src-tauri/src/utils/: constants.rs  mod.rs
src/components/: AdminDashboard.tsx  HeaderBar.tsx  InformationPanel.tsx  PreviewPanel.tsx  ServerControlPanel.tsx  TimerPanel.tsx  TurnControlPanel.tsx
src/core/: index.ts
src/core/timer/: TimerEngine.ts  index.ts  types.ts
src/core/tournament/: TournamentEngine.ts  constants.ts  index.ts  selectors.ts  types.ts
src/hooks/: index.ts  useTimer.ts  useTournament.ts
src/overlay/: index.html  main.ts  types.ts
src/services/: adminStore.facadeTimerSync.test.ts  adminStore.ts  overlayBridge.ts  serverService.ts  windowManager.ts
src/store/: index.ts  timerStore.test.ts  timerStore.ts  tournamentStore.test.ts  tournamentStore.ts  uiStore.test.ts  uiStore.ts
src/test/: setup.ts
src/types/: admin.types.ts
src/utils/: overlayPositioning.ts  tournamentHelpers.ts
(+23 files in other folders)
