[package]
name = "new-admin-client"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "new_admin_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Socket.IO server dependencies
socketioxide = "0.13"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
# Additional dependencies for server management
tracing = "0.1"
tracing-subscriber = "0.3"
# HTTP server dependencies
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

